--- a/index.html
+++ b/index.html
@@ -366,13 +366,13 @@
 			  <div class="btn-container">
 				<button
 				  class="btn btn-color-2 project-btn"
-				  onclick="location.href='https://github.com/'"
+				  onclick="location.href='https://github.com/Gpriyadharshini8148/Project'"
 				>
 				  Github
 				</button>
 				<button
 				  class="btn btn-color-2 project-btn"
-				  onclick="location.href='https://github.com/'"
+				  onclick="location.href='https://github.com/Gpriyadharshini8148/Project'"
 				>
 				  Live Demo
 				</button>
@@ -390,13 +390,13 @@
 			  <div class="btn-container">
 				<button
 				  class="btn btn-color-2 project-btn"
-				  onclick="location.href='https://github.com/'"
+				  onclick="location.href='https://github.com/Gpriyadharshini8148/Pneumonia_Detection'"
 				>
 				  Github
 				</button>
 				<button
 				  class="btn btn-color-2 project-btn"
-				  onclick="location.href='https://github.com/'"
+				  onclick="location.href='https://github.com/Gpriyadharshini8148/Pneumonia_Detection'"
 				>
 				  Live Demo
 				</button>
