--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 				  height="200px"
 				/>
 			  </div>
-			  <h2 class="experience-sub-title project-title">Project One</h2>
+			  <h2 class="experience-sub-title project-title">TravelGo Mobile Appication</h2>
 			  <div class="btn-container">
 				<button
 				  class="btn btn-color-2 project-btn"
@@ -360,9 +360,11 @@
 				  src="project2.png"
 				  alt="Project 2"
 				  class="project-img"
+				 width="100px"
+				  height="200px"
 				/>
 			  </div>
-			  <h2 class="experience-sub-title project-title">Project Two</h2>
+			  <h2 class="experience-sub-title project-title">AI model for Assistinf Deaf</h2>
 			  <div class="btn-container">
 				<button
 				  class="btn btn-color-2 project-btn"
@@ -381,12 +383,14 @@
 			<div class="details-container color-container">
 			  <div class="article-container">
 				<img
-				  src="project-3.png"
+				  src="project3.jpg"
 				  alt="Project 3"
 				  class="project-img"
+				  width="100px"
+				  height="200px"
 				/>
 			  </div>
-			  <h2 class="experience-sub-title project-title">Project Three</h2>
+			  <h2 class="experience-sub-title project-title">Pneumonia Detection</h2>
 			  <div class="btn-container">
 				<button
 				  class="btn btn-color-2 project-btn"
