--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		  <div class="btn-container">
 			<button
 			  class="btn btn-color-2"
-			  onclick="window.open('resume-example.pdf')"
+			  onclick="window.open('resume_priyadharshini_g(1).pdf')"
 			>
 			  Download CV
 			</button>
@@ -364,7 +364,7 @@
 				  height="200px"
 				/>
 			  </div>
-			  <h2 class="experience-sub-title project-title">AI model for Assistinf Deaf</h2>
+			  <h2 class="experience-sub-title project-title">AI model for Assisting Deaf</h2>
 			  <div class="btn-container">
 				<button
 				  class="btn btn-color-2 project-btn"
